fixed syntax errors that I accidentally changed that prevente me from going back to desktop version while on mobile viewport size

--- a/style/index.css
+++ b/style/index.css
@@ -143,15 +143,14 @@ p {
     border-bottom: 1px dashed black;
     
 }
- .middle-content h2 {
-     padding: 0 2%;
-     margin-bottom: 0;
- }
+.middle-content h2 {
+    padding: 0 2%;
+    margin-bottom: 0;
+}
 .middle-content .boxes {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-   
+    justify-content: space-evenly;   
 }
 
 .middle-content  .boxes .box1 {
@@ -167,104 +166,104 @@ p {
     }
 
 .middle-content  .boxes .box2 {
-        width: 12.5%;
-        height: 100px;
-        padding:3%;
-        background: gold;
-        margin: 20px 2.5%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }      
 
 .middle-content  .boxes .box3 {
-            width: 12.5%;
-            height: 100px;
-            padding:3%;
-            background: cadetblue;
-            margin: 20px 2.5%;
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }                 
 .middle-content  .boxes .box4 {
-                width: 12.5%;
-                height: 100px;
-                padding:3%;
-                background: coral;
-                margin: 20px 2.5%;
-                color: white;
-                display: flex;
-                align-items: center;
-                justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }    
 .middle-content  .boxes .box5 {
-        width: 12.5%;
-        height: 100px;
-        padding:3%;
-        background: crimson;
-        margin: 20px 2.5%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }                  
     .middle-content  .boxes .box6 {
-        width: 12.5%;
-        height: 100px;
-        padding:3%;
-        background: forestgreen;
-        margin: 20px 2.5%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }                  
     .middle-content  .boxes .box7 {
-        width: 12.5%;
-        height: 100px;
-        padding:3%;
-        background: darkorchid;
-        margin: 20px 2.5%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }
     .middle-content  .boxes .box8 {
-        width: 12.5%;
-        height: 100px;
-        padding:3%;
-        background: hotpink;
-        margin: 20px 2.5%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }   
     .middle-content  .boxes .box9 {
-        width: 12.5%;
-        height: 100px;
-        padding:3%;
-        background: indigo;
-        margin: 20px 2.5%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:3%;
+    background: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }
     .middle-content  .boxes .box10 {
-        width: 12.5%;
-        height: 100px;
-        padding:2%;
-        background: dodgerblue;
-        margin: 20px 2.5%;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between; 
+    width: 12.5%;
+    height: 100px;
+    padding:2%;
+    background: dodgerblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
     }         
 /* ****** COLOR BOXES END ABOVE****  */
 .bottom-content {
@@ -305,7 +304,7 @@ footer nav a {
     text-decoration: none;
 }
 
- section { 
+section { 
     width: 800px;
     margin: 0 auto;
 }
@@ -317,24 +316,24 @@ footer nav a {
 }
 /* ****DESKTOP ENDS ABOVE ********/
 
-@media (max-width: 500px){
+@media(max-width: 500px){
     header nav {
         flex-direction: column;
         padding: 2%;
+    
     }
     .lambda-logo{
         padding:2%;
     }
 
     
-    }
+    
     a{
         padding: 1.5%;
     }
     .header-image {
         width:100%;
         padding: 1%;
-       
     }
 
     .container .top-content {
@@ -347,9 +346,6 @@ footer nav a {
     footer nav {
         flex-direction: column;
         margin: 4%;
-       
-    }
+    } 
 
-   
-   
 }
